Se agrega loader en img

--- a/src/app/shared/components/detail-row/detail-row.component.html
+++ b/src/app/shared/components/detail-row/detail-row.component.html
@@ -1,10 +1,16 @@
 <mat-list-item>
   <div class="contenido">
+    @if (showLoader) {
+    <mat-spinner class="marca-spinner"></mat-spinner>
+    }
     <img
       mat-card-image
-      [src]="marca.imagen || 'assets/images/no-image.webp'"
+      [src]="backgroundImg"
+      (load)="loaderImg()"
+      (error)="onImageError($event)"
       [alt]="marca.nombreMarca"
       class="marca-image"
+      [hidden]="showLoader"
     />
 
     <div>
