--- a/src/app/shared/components/detail/detail.component.scss
+++ b/src/app/shared/components/detail/detail.component.scss
@@ -19,6 +19,13 @@
     border-top-right-radius: 15px;
   }
 
+  .card-loader {
+    width: auto !important;
+    height: 200px;
+    object-fit: cover;
+    margin: 2rem 0rem
+  }
+
   p {
     margin-top: 2rem;
     text-align: left;
@@ -62,6 +69,12 @@ h3 {
   object-fit: cover;
   border-radius: 50%;
   box-shadow: 0 18px 34px rgba(0, 0, 0, 0.4);
+}
+
+.circular-loader {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .floating-card {
